--- a/UnityLauncherPro/MainWindow.xaml
+++ b/UnityLauncherPro/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UnityLauncherPro"
         mc:Ignorable="d"
-        Title="UnityLauncherPro" Height="600" Width="500" WindowStartupLocation="CenterScreen" Background="#FF1E1E1E">
+        Title="UnityLauncherPro" Height="600" Width="500" WindowStartupLocation="CenterScreen" Background="#FF121212">
 
 	<Window.Resources>
 		<Style x:Key="TabItemStyle1" TargetType="{x:Type TabItem}">
@@ -19,12 +19,12 @@
 						<ControlTemplate.Triggers>
 							<Trigger Property="IsSelected" Value="False">
 								<Setter Property="TextElement.Foreground" TargetName="ContentSite" Value="#FFC1C1C1"/>
-								<Setter TargetName="Border" Property="Background" Value="#FF2D2D30" />
+								<Setter TargetName="Border" Property="Background" Value="#FF1D1D1D" />
 							</Trigger>
 							<Trigger Property="IsSelected" Value="True">
 								<Setter Property="TextElement.Foreground" TargetName="ContentSite" Value="White"/>
 								<Setter Property="TextElement.FontWeight" TargetName="ContentSite" Value="SemiBold"/>
-								<Setter TargetName="Border" Property="Background" Value="#FF007ACC"/>
+								<Setter TargetName="Border" Property="Background" Value="#FF262626"/>
 							</Trigger>
 						</ControlTemplate.Triggers>
 					</ControlTemplate>
@@ -33,37 +33,54 @@
 		</Style>
 
 		<Style x:Key="HeaderStyle" TargetType="DataGridColumnHeader">
-			<Setter Property="Background" Value="#FF333337" />
-			<Setter Property="Foreground" Value="#FFB4B4B4" />
-			<Setter Property="BorderBrush" Value="#FFB4B4B4" />
-			<Setter Property="BorderThickness" Value="1,1,1,1" />
+			<Setter Property="Background" Value="#4C3F3F46" />
+			<Setter Property="Foreground" Value="#FFB6B6B6" />
+			<Setter Property="BorderBrush" Value="#4C000000" />
+			<Setter Property="BorderThickness" Value="0,0,1,1" />
 			<Setter Property="SnapsToDevicePixels" Value="True" />
 			<Setter Property="HorizontalContentAlignment" Value="Left" />
-			<Setter Property="Height" Value="30" />
-			<Setter Property="Padding" Value="3,2,2,2" />
+			<Setter Property="Height" Value="28" />
+			<Setter Property="Padding" Value="6,2,2,2" />
 		</Style>
 
 	</Window.Resources>
-	
-	<Grid>
-		<TabControl x:Name="tabControl"  Background="#FF252526" BorderBrush="{x:Null}" Padding="0">
+
+	<Grid Margin="0">
+		<TabControl x:Name="tabControl"  Background="#FF262626" BorderBrush="{x:Null}" Padding="0">
 			<TabItem Header="Projects" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black">
-				<DataGrid x:Name="dataGrid" Margin="0,30" Background="#FF303030" BorderBrush="{x:Null}" ColumnHeaderStyle="{StaticResource HeaderStyle}" Padding="0" HorizontalScrollBarVisibility="Disabled">
-					<DataGrid.Columns>
-						<DataGridTextColumn Binding="{Binding Project}" ClipboardContentBinding="{x:Null}" Header="Project" IsReadOnly="True" MinWidth="123"/>
-						<DataGridTextColumn Binding="{Binding Version}" ClipboardContentBinding="{x:Null}" Header="Version" IsReadOnly="True"/>
-						<DataGridTextColumn Binding="{Binding Path}" ClipboardContentBinding="{x:Null}" Header="Path" IsReadOnly="True"/>
-						<DataGridTextColumn Binding="{Binding Modified}" ClipboardContentBinding="{x:Null}" Header="Modified" IsReadOnly="True"/>
-						<DataGridTextColumn Binding="{Binding Arguments}" ClipboardContentBinding="{x:Null}" Header="Arguments" IsReadOnly="True"/>
-						<DataGridTextColumn Binding="{Binding GITBranch}" ClipboardContentBinding="{x:Null}" Header="GITBranch" IsReadOnly="True"/>
-					</DataGrid.Columns>
-					<local:TestData GITBranch="" Modified="" Project="MMO" Path="A:/temp" Version="2099.1.2.3"/>
-				</DataGrid>
+				<Grid>
+					<TextBox x:Name="textBox" Height="19" TextWrapping="Wrap" Text="Search" Width="230" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="8,6,0,0" Background="#FF333337" Foreground="Gainsboro" BorderBrush="#FF434346"/>
+					<DataGrid x:Name="dataGrid" Margin="0,30" Background="{x:Null}" BorderBrush="{x:Null}" ColumnHeaderStyle="{StaticResource HeaderStyle}" Padding="0" HorizontalScrollBarVisibility="Disabled" HeadersVisibility="Column" Foreground="#FFD8D8D8" HorizontalGridLinesBrush="#4C000000" VerticalGridLinesBrush="#19000000">
+						<DataGrid.Columns>
+							<DataGridTextColumn Binding="{Binding Project}" ClipboardContentBinding="{x:Null}" Header="Project" IsReadOnly="True" MinWidth="123"/>
+							<DataGridTextColumn Binding="{Binding Version}" ClipboardContentBinding="{x:Null}" Header="Version" IsReadOnly="True"/>
+							<DataGridTextColumn Binding="{Binding Path}" ClipboardContentBinding="{x:Null}" Header="Path" IsReadOnly="True"/>
+							<DataGridTextColumn Binding="{Binding Modified}" ClipboardContentBinding="{x:Null}" Header="Modified" IsReadOnly="True"/>
+							<DataGridTextColumn Binding="{Binding Arguments}" ClipboardContentBinding="{x:Null}" Header="Arguments" IsReadOnly="True"/>
+							<DataGridTextColumn Binding="{Binding GITBranch}" ClipboardContentBinding="{x:Null}" Header="GITBranch" IsReadOnly="True"/>
+						</DataGrid.Columns>
+						<DataGrid.RowStyle>
+							<Style TargetType="DataGridRow">
+								<Setter Property="Background" Value="#FF3F3F46" />
+								<Setter Property="BorderBrush" Value="{x:Null}" />
+								<Setter Property="BorderThickness" Value="0,0,0,0" />
+								<Style.Triggers>
+									<Trigger Property="IsMouseOver" Value="True">
+										<Setter Property="Background" Value="#FF007ACC"/>
+										<Setter Property="Foreground" Value="White"/>
+									</Trigger>
+								</Style.Triggers>
+							</Style>
+						</DataGrid.RowStyle>
+						<local:TestData GITBranch="" Modified="" Project="MMO" Path="A:/temp" Version="2099.1.2.3"/>
+					</DataGrid>
+				</Grid>
 			</TabItem>
 			<TabItem Header="Unitys" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black" />
 			<TabItem Header="Packages" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black" />
 			<TabItem Header="Updates" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black" />
 			<TabItem Header="Settings" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black" />
+
 
 		</TabControl>
 	</Grid>
