--- a/UnityLauncherPro/MainWindow.xaml
+++ b/UnityLauncherPro/MainWindow.xaml
@@ -8,6 +8,7 @@
         Title="UnityLauncherPro" Height="600" Width="500" WindowStartupLocation="CenterScreen" Background="#FF121212" MinWidth="500" MinHeight="300" WindowStyle="None" ResizeMode="CanResizeWithGrip" AllowsTransparency="True">
 
 	<Window.Resources>
+		<!-- tabs -->
 		<Style x:Key="TabItemStyle1" TargetType="{x:Type TabItem}">
 			<Setter Property="Template">
 				<Setter.Value>
@@ -23,7 +24,9 @@
 							</Trigger>
 							<Trigger Property="IsSelected" Value="True">
 								<Setter Property="TextElement.Foreground" TargetName="ContentSite" Value="White"/>
-								<Setter Property="TextElement.FontWeight" TargetName="ContentSite" Value="SemiBold"/>
+								<Setter TargetName="Border" Property="Background" Value="#FF262626"/>
+							</Trigger>
+							<Trigger Property="IsMouseOver" Value="True">
 								<Setter TargetName="Border" Property="Background" Value="#FF262626"/>
 							</Trigger>
 						</ControlTemplate.Triggers>
@@ -32,6 +35,7 @@
 			</Setter>
 		</Style>
 
+		<!-- datagrid -->
 		<Style x:Key="HeaderStyle" TargetType="DataGridColumnHeader">
 			<Setter Property="Background" Value="#4C3F3F46" />
 			<Setter Property="Foreground" Value="#FFB6B6B6" />
@@ -43,6 +47,31 @@
 			<Setter Property="Padding" Value="6,2,2,2" />
 		</Style>
 
+		<!-- custom buttons -->
+		<Style x:Key="CustomButton" TargetType="Button">
+			<Setter Property="SnapsToDevicePixels" Value="true"/>
+			<Setter Property="OverridesDefaultStyle" Value="true"/>
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="Button">
+						<Border Name="shortcutbutton" BorderThickness="0" BorderBrush="Black" Background="{TemplateBinding Background}">
+							<ContentPresenter Margin="0" HorizontalAlignment="Center" VerticalAlignment="Center" RecognizesAccessKey="True"/>
+						</Border>
+						<ControlTemplate.Triggers>
+							<Trigger Property="IsMouseOver" Value="true">
+								<Setter TargetName="shortcutbutton" Property="Background" Value="#FF494949" />
+								<!--<Setter Property="TextElement.Foreground" TargetName="shortcutbutton" Value="Blue"/>-->
+							</Trigger>
+							<Trigger Property="IsPressed" Value="true">
+								<Setter TargetName="shortcutbutton" Property="Background" Value="#FF0F0F0F" />
+								<!--<Setter Property="TextElement.Foreground" TargetName="shortcutbutton" Value="Red"/>-->
+							</Trigger>
+						</ControlTemplate.Triggers>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
+		
 	</Window.Resources>
 
 	<Grid Margin="0">
@@ -51,10 +80,13 @@
 			<RowDefinition />
 		</Grid.RowDefinitions>
 
-		<Grid>
-			<Rectangle Grid.Row="0" Fill="#FF0C0C0C" MouseDown="OnRectangleMouseDown" />
-			<Image Source="Images/icon.png" HorizontalAlignment="Left" Width="16" Height="16" Margin="4,0,0,0" />
-			<Label Content="UnityLauncherPro 1.0" IsHitTestVisible="False" Margin="19,0,0,-5"  Foreground="#FFB8B8B8" FontSize="12" HorizontalAlignment="Left"  />
+		<Grid Grid.Row="0" UseLayoutRounding="False">
+			<Rectangle Fill="#FF0C0C0C" MouseDown="OnRectangleMouseDown" />
+			<Image Source="Images/icon.png" RenderOptions.BitmapScalingMode="NearestNeighbor" HorizontalAlignment="Left" Width="16" Height="16" Margin="4,0,0,0" SnapsToDevicePixels="True" UseLayoutRounding="True" />
+			<Label Content="UnityLauncherPro" IsHitTestVisible="False" Margin="19,0,0,-5"  Foreground="#FFB8B8B8" FontSize="12" HorizontalAlignment="Left"  />
+			<Button Name="btnClose" BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Right" VerticalAlignment="Top" Height="23" Width="23" Background="{x:Null}" Click="BtnClose_Click">
+				<TextBlock Text="x" Margin="0,-5,0,0" FontSize="18" Foreground="#FFC3C3C3"/>
+			</Button>
 		</Grid>
 
 		<TabControl Grid.Row="1" x:Name="tabControl"  Background="#FF262626" BorderBrush="{x:Null}" Padding="0">
@@ -75,7 +107,8 @@
 						</TextBlock.Style>
 					</TextBlock>
 
-					<Button x:Name="button" Content="⟳" Height="22" Width="22" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="16" Background="#FF3F3F46" Foreground="#FFC1C1C1" Margin="0,4,3,0" Padding="1,-2,1,1"/>
+					<Button Style="{StaticResource CustomButton}" x:Name="btnAddProjectFolder" Content="Add Project.." Height="22" Width="78" HorizontalAlignment="Right" VerticalAlignment="Top" Background="#FF3F3F46" Foreground="#FFC1C1C1" Margin="0,4,34,0" Click="BtnAddProjectFolder_Click" BorderBrush="{x:Null}" />
+					<Button Style="{StaticResource CustomButton}" x:Name="btnRefreshProjectList" Content="⟳" Height="22" Width="22" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="16" Background="#FF3F3F46" Foreground="#FFC1C1C1" Margin="0,4,3,0" Padding="1,-2,1,1" BorderBrush="{x:Null}"/>
 
 					<DataGrid x:Name="dataGrid" Margin="0,30" Background="{x:Null}" BorderBrush="{x:Null}" ColumnHeaderStyle="{StaticResource HeaderStyle}" Padding="0" HorizontalScrollBarVisibility="Disabled" HeadersVisibility="Column" Foreground="#FFD8D8D8" HorizontalGridLinesBrush="#4C000000" VerticalGridLinesBrush="#19000000">
 						<DataGrid.Columns>
