--- a/UnityLauncherPro/MainWindow.xaml
+++ b/UnityLauncherPro/MainWindow.xaml
@@ -71,7 +71,7 @@
 				</Setter.Value>
 			</Setter>
 		</Style>
-		
+
 	</Window.Resources>
 
 	<Grid Margin="0">
@@ -113,7 +113,7 @@
 					<Button Style="{StaticResource CustomButton}" x:Name="btnAddProjectFolder" Content="Add Project.." Height="22" Width="78" HorizontalAlignment="Right" VerticalAlignment="Top" Background="#FF3F3F46" Foreground="#FFC1C1C1" Margin="0,4,34,0" Click="BtnAddProjectFolder_Click" BorderBrush="{x:Null}" />
 					<Button Style="{StaticResource CustomButton}" x:Name="btnRefreshProjectList" Content="⟳" Height="22" Width="22" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="16" Background="#FF3F3F46" Foreground="#FFC1C1C1" Margin="0,4,3,0" Padding="1,-2,1,1" BorderBrush="{x:Null}"/>
 
-					<DataGrid x:Name="dataGrid" SelectionMode="Single" Margin="0,30" Background="{x:Null}" BorderBrush="{x:Null}" ColumnHeaderStyle="{StaticResource HeaderStyle}" Padding="0" HorizontalScrollBarVisibility="Disabled" HeadersVisibility="Column" Foreground="#FFD8D8D8" HorizontalGridLinesBrush="#4C000000" VerticalGridLinesBrush="#19000000">
+					<DataGrid x:Name="dataGrid" SelectionMode="Single" Margin="0,30,0,81" Background="{x:Null}" BorderBrush="{x:Null}" ColumnHeaderStyle="{StaticResource HeaderStyle}" Padding="0" HorizontalScrollBarVisibility="Disabled" HeadersVisibility="Column" Foreground="#FFD8D8D8" HorizontalGridLinesBrush="#4C000000" VerticalGridLinesBrush="#19000000">
 						<DataGrid.Columns>
 							<DataGridTextColumn Binding="{Binding Title}" ClipboardContentBinding="{x:Null}" Header="Project" IsReadOnly="True" MinWidth="123"/>
 							<DataGridTextColumn Binding="{Binding Version}" ClipboardContentBinding="{x:Null}" Header="Version" IsReadOnly="True"/>
@@ -137,6 +137,22 @@
 						</DataGrid.RowStyle>
 						<local:Project GITBranch="" Modified="" Title="MMO" Path="A:/temp" Version="2099.1.2.3"/>
 					</DataGrid>
+
+					<Grid VerticalAlignment="Bottom" Margin="4,0,8,30">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="20*" />
+							<ColumnDefinition Width="20*" />
+							<ColumnDefinition Width="45*" />
+							<ColumnDefinition Width="15*" />
+						</Grid.ColumnDefinitions>
+						<Grid.RowDefinitions>
+							<RowDefinition Height="32" />
+						</Grid.RowDefinitions>
+						<Button Grid.Column="0" Style="{StaticResource CustomButton}" x:Name="btnUpgradeProject" Content="Upgrade" Background="#FF3F3F46" Foreground="#FFC1C1C1" Margin="5,0,0,0" BorderBrush="{x:Null}" />
+						<Button Grid.Column="1" Style="{StaticResource CustomButton}" x:Name="btnLaunchUnity" Content="Run Unity" Background="#FF3F3F46" Foreground="#FFC1C1C1" Margin="8,0,0,0" BorderBrush="{x:Null}" />
+						<Button Grid.Column="2" Style="{StaticResource CustomButton}" x:Name="btnLaunchProject" Content="Open Project" Background="#FF3F3F46" Foreground="#FFC1C1C1" Margin="8,0,0,0" BorderBrush="{x:Null}" />
+						<Button Grid.Column="3" Style="{StaticResource CustomButton}" x:Name="btnExplore" Content="Explore" Background="#FF3F3F46" Foreground="#FFC1C1C1" Margin="8,0,0,0" BorderBrush="{x:Null}" />
+					</Grid>
 				</Grid>
 			</TabItem>
 			<TabItem Header="Unitys" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black" />
