start moving color/brush definitions to resource dictionary

--- a/UnityLauncherPro/App.xaml
+++ b/UnityLauncherPro/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:UnityLauncherPro"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
-    </Application.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="Resources/Colors.xaml"/>
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</Application.Resources>
 </Application>
