--- a/UnityLauncherPro/MainWindow.xaml
+++ b/UnityLauncherPro/MainWindow.xaml
@@ -19,15 +19,15 @@
 						</Border>
 						<ControlTemplate.Triggers>
 							<Trigger Property="IsSelected" Value="False">
-								<Setter Property="TextElement.Foreground" TargetName="ContentSite" Value="#FFC1C1C1"/>
-								<Setter TargetName="Border" Property="Background" Value="#FF1D1D1D" />
+								<Setter Property="TextElement.Foreground" TargetName="ContentSite" Value="{StaticResource DeactiveTabForeground}"/>
+								<Setter TargetName="Border" Property="Background" Value="{StaticResource DeactiveTabBackground}" />
 							</Trigger>
 							<Trigger Property="IsSelected" Value="True">
 								<Setter Property="TextElement.Foreground" TargetName="ContentSite" Value="White"/>
-								<Setter TargetName="Border" Property="Background" Value="#FF262626"/>
+								<Setter TargetName="Border" Property="Background" Value="{StaticResource MainBackgroundColor}"/>
 							</Trigger>
 							<Trigger Property="IsMouseOver" Value="True">
-								<Setter TargetName="Border" Property="Background" Value="#FF262626"/>
+								<Setter TargetName="Border" Property="Background" Value="{StaticResource MainBackgroundColor}"/>
 							</Trigger>
 						</ControlTemplate.Triggers>
 					</ControlTemplate>
@@ -37,9 +37,9 @@
 
 		<!-- datagrid header -->
 		<Style x:Key="HeaderStyle" TargetType="DataGridColumnHeader">
-			<Setter Property="Background" Value="#4C3F3F46" />
-			<Setter Property="Foreground" Value="#FFB6B6B6" />
-			<Setter Property="BorderBrush" Value="#4C000000" />
+			<Setter Property="Background" Value="{StaticResource DatagridHeaderBackground}" />
+			<Setter Property="Foreground" Value="{StaticResource DatagridHeaderForeground}" />
+			<Setter Property="BorderBrush" Value="{StaticResource DatagridHeaderBorder}" />
 			<Setter Property="BorderThickness" Value="0,0,1,1" />
 			<Setter Property="SnapsToDevicePixels" Value="True" />
 			<Setter Property="HorizontalContentAlignment" Value="Left" />
@@ -47,24 +47,22 @@
 			<Setter Property="Padding" Value="6,2,2,2" />
 			<Style.Triggers>
 				<Trigger Property="IsMouseOver" Value="True">
-					<Setter Property="Background" Value="#FF3F3F46"/>
+					<Setter Property="Background" Value="{StaticResource ButtonBackground}"/>
 				</Trigger>
 			</Style.Triggers>
 		</Style>
 
 		<!-- datagrid rows & row selection -->
 		<Style TargetType="DataGridRow">
-			<Setter Property="Background" Value="#FF3F3F46" />
+			<Setter Property="Background" Value="{StaticResource ButtonBackground}" />
 			<Setter Property="BorderBrush" Value="{x:Null}" />
 			<Setter Property="BorderThickness" Value="0,0,0,0" />
 			<Style.Triggers>
 				<Trigger Property="IsMouseOver" Value="True">
-					<Setter Property="Background" Value="#7F007ACC"/>
-					<Setter Property="Foreground" Value="White"/>
+					<Setter Property="Background" Value="{StaticResource DataGridRowMouseOver}"/>
 				</Trigger>
 				<Trigger Property="IsSelected" Value="True">
-					<Setter Property="Background" Value="#FF007ACC" />
-					<Setter Property="Foreground" Value="White"/>
+					<Setter Property="Background" Value="{StaticResource DataGridRowSelectedBackground}" />
 				</Trigger>
 			</Style.Triggers>
 		</Style>
@@ -120,17 +118,17 @@
 				<Setter.Value>
 					<ControlTemplate TargetType="{x:Type RepeatButton}">
 						<!-- button background -->
-						<Border Name="Border" Margin="1" CornerRadius="0" BorderThickness="0" Background="#FF303032" BorderBrush="{x:Null}">
+						<Border Name="Border" Margin="1" CornerRadius="0" BorderThickness="0" Background="{DynamicResource ButtonBackground}" BorderBrush="{x:Null}">
 							<!-- arrow sign -->
-							<Path HorizontalAlignment="Center" VerticalAlignment="Center" Fill="#FF5E5E64" Data="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}" />
+							<Path HorizontalAlignment="Center" VerticalAlignment="Center" Fill="{DynamicResource ScrollArrowForeground}" Data="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}" />
 						</Border>
 						<ControlTemplate.Triggers>
 							<!-- NOTE order matters, if pressed is before mouseover, then it gets overwritten -->
 							<Trigger Property="IsMouseOver" Value="true">
-								<Setter TargetName="Border" Property="Background" Value="#FF3E3E3E" />
+								<Setter TargetName="Border" Property="Background" Value="{StaticResource TextBoxBackground}" />
 							</Trigger>
 							<Trigger Property="IsPressed" Value="true">
-								<Setter TargetName="Border" Property="Background" Value="#FF838383" />
+								<Setter TargetName="Border" Property="Background" Value="{StaticResource ScrollArrowPressed}" />
 							</Trigger>
 							<Trigger Property="IsEnabled" Value="false">
 								<Setter Property="Foreground" Value="Black"/>
@@ -155,7 +153,7 @@
 			</Setter>
 		</Style>
 
-		<!-- scroll thumb bar -->
+		<!-- scroll thumb (elevator) bar -->
 		<Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
 			<Setter Property="SnapsToDevicePixels" Value="True"/>
 			<Setter Property="OverridesDefaultStyle" Value="true"/>
@@ -167,7 +165,7 @@
 						<Border Name="Border" CornerRadius="0" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1" />
 						<ControlTemplate.Triggers>
 							<Trigger Property="IsMouseOver" Value="true">
-								<Setter TargetName="Border" Property="Background" Value="#FF6A6969" />
+								<Setter TargetName="Border" Property="Background" Value="{StaticResource ScrollBarThumbFill}" />
 							</Trigger>
 						</ControlTemplate.Triggers>
 					</ControlTemplate>
@@ -183,7 +181,7 @@
 					<RowDefinition MaxHeight="18"/>
 				</Grid.RowDefinitions>
 				<!-- scrollbar background -->
-				<Border Grid.RowSpan="3" CornerRadius="0" Background="#FF151515" />
+				<Border Grid.RowSpan="3" CornerRadius="0" Background="{DynamicResource ScrollBarBackground}" />
 				<!-- scrollbar top button -->
 				<RepeatButton Grid.Row="0" Style="{StaticResource ScrollBarLineButton}" Height="18" Command="ScrollBar.LineUpCommand"  Content="M 0 4 L 8 4 L 4 0 Z" />
 				<Track Name="PART_Track" Grid.Row="1" IsDirectionReversed="true">
@@ -192,7 +190,7 @@
 					</Track.DecreaseRepeatButton>
 					<Track.Thumb>
 						<!-- scrollbar foreground -->
-						<Thumb Style="{StaticResource ScrollBarThumb}" Margin="1,0,1,0" Background="#FF47474B" BorderBrush="{x:Null}"/>
+						<Thumb Style="{StaticResource ScrollBarThumb}" Margin="1,0,1,0" Background="{DynamicResource ScrollBarFill}" BorderBrush="{x:Null}"/>
 					</Track.Thumb>
 					<Track.IncreaseRepeatButton>
 						<RepeatButton Style="{StaticResource ScrollBarPageButton}" Command="ScrollBar.PageDownCommand" />
@@ -203,39 +201,10 @@
 			</Grid>
 		</ControlTemplate>
 
-		<ControlTemplate x:Key="HorizontalScrollBar" TargetType="{x:Type ScrollBar}">
-			<Grid >
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition MaxWidth="18"/>
-					<ColumnDefinition Width="0.00001*"/>
-					<ColumnDefinition MaxWidth="18"/>
-				</Grid.ColumnDefinitions>
-				<Border Grid.ColumnSpan="3" CornerRadius="2" Background="#F0F0F0" />
-				<RepeatButton Grid.Column="0" Style="{StaticResource ScrollBarLineButton}" Width="18" Command="ScrollBar.LineLeftCommand" Content="M 4 0 L 4 8 L 0 4 Z" />
-				<Track Name="PART_Track" Grid.Column="1" IsDirectionReversed="False">
-					<Track.DecreaseRepeatButton>
-						<RepeatButton Style="{StaticResource ScrollBarPageButton}" Command="ScrollBar.PageLeftCommand" />
-					</Track.DecreaseRepeatButton>
-					<Track.Thumb>
-						<Thumb Style="{StaticResource ScrollBarThumb}" Margin="0,1,0,1" Background="#FF34587C" BorderBrush="Blue" />
-					</Track.Thumb>
-					<Track.IncreaseRepeatButton>
-						<RepeatButton Style="{StaticResource ScrollBarPageButton}" Command="ScrollBar.PageRightCommand" />
-					</Track.IncreaseRepeatButton>
-				</Track>
-				<RepeatButton Grid.Column="3" Style="{StaticResource ScrollBarLineButton}" Width="18" Command="ScrollBar.LineRightCommand" Content="M 0 0 L 4 4 L 0 8 Z"/>
-			</Grid>
-		</ControlTemplate>
-
 		<Style x:Key="{x:Type ScrollBar}" TargetType="{x:Type ScrollBar}">
 			<Setter Property="SnapsToDevicePixels" Value="True"/>
 			<Setter Property="OverridesDefaultStyle" Value="true"/>
 			<Style.Triggers>
-				<Trigger Property="Orientation" Value="Horizontal">
-					<Setter Property="Width" Value="Auto"/>
-					<Setter Property="Height" Value="18" />
-					<Setter Property="Template" Value="{StaticResource HorizontalScrollBar}" />
-				</Trigger>
 				<Trigger Property="Orientation" Value="Vertical">
 					<Setter Property="Width" Value="18"/>
 					<Setter Property="Height" Value="Auto" />
@@ -248,7 +217,7 @@
 
 	</Window.Resources>
 
-
+	
 	<!-- UI -->
 
 	<Grid Margin="0">
@@ -276,7 +245,7 @@
 		<!-- main content : Tabs -->
 		<TabControl Grid.Row="1" x:Name="tabControl"  Background="{DynamicResource MainBackgroundColor}" BorderBrush="{x:Null}" Padding="0" Margin="0">
 			<!-- Tab: Projects-->
-			<TabItem Header="Projects" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black">
+			<TabItem Header="Projects" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}">
 				<Grid>
 					<!-- search box -->
 					<Grid Background="{DynamicResource TextBoxBackground}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="222" Margin="6,5,0,0" Height="20"  >
