--- a/UnityLauncherPro/MainWindow.xaml
+++ b/UnityLauncherPro/MainWindow.xaml
@@ -7,7 +7,7 @@
 		mc:Ignorable="d"
         Title="UnityLauncherPro" Height="600" Width="500" WindowStartupLocation="CenterScreen" Background="{DynamicResource DarkestBackground}" MinWidth="500" MinHeight="300" AllowsTransparency="True" WindowStyle="None" Margin="0"	>
 
-<Window.Resources>
+	<Window.Resources>
 		<!-- tabs -->
 		<Style x:Key="TabItemStyle1" TargetType="{x:Type TabItem}">
 			<Setter Property="Template">
@@ -217,7 +217,7 @@
 
 	</Window.Resources>
 
-	
+
 	<!-- UI -->
 
 	<Grid Margin="0">
@@ -233,18 +233,18 @@
 			<Image Source="Images/icon.png" RenderOptions.BitmapScalingMode="NearestNeighbor" HorizontalAlignment="Left" Width="16" Height="16" Margin="4,0,0,0" SnapsToDevicePixels="True" UseLayoutRounding="True" />
 			<Label Content="UnityLauncherPro" IsHitTestVisible="False" Margin="19,0,0,-5"  Foreground="#FFB8B8B8" FontSize="12" HorizontalAlignment="Left"  />
 			<!-- minimize -->
-			<Button Name="btnMinimize" BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Right" VerticalAlignment="Top" Height="23" Width="23" Background="Transparent" Click="BtnMinimize_Click" Margin="0,0,27,0" Padding="2,0,2,8">
+			<Button Name="btnMinimize" BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Right" VerticalAlignment="Top" Height="23" Width="23" Background="Transparent" Click="BtnMinimize_Click" Margin="0,0,27,0" Padding="2,0,2,8" IsTabStop="False">
 				<TextBlock Text="–"   FontSize="15" Foreground="#FFC3C3C3" Padding="0" Height="23" HorizontalAlignment="Center"/>
 			</Button>
 			<!-- close -->
-			<Button Name="btnClose"    BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Right" VerticalAlignment="Top" Height="23" Width="23" Background="Transparent" Click="BtnClose_Click" Padding="0,2">
+			<Button Name="btnClose"    BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Right" VerticalAlignment="Top" Height="23" Width="23" Background="Transparent" Click="BtnClose_Click" Padding="0,2" IsTabStop="False">
 				<TextBlock Text="❌" FontSize="10" Foreground="#FFC3C3C3" Padding="5,3,4,4" HorizontalAlignment="Center" />
 			</Button>
 		</Grid>
 
 		<!-- main content : Tabs -->
 		<TabControl Grid.Row="1" x:Name="tabControl"  Background="{DynamicResource MainBackgroundColor}" BorderBrush="{x:Null}" Padding="0" Margin="0">
-			
+
 			<!-- Tab: Projects-->
 			<TabItem Header="Projects" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}">
 				<Grid>
@@ -253,7 +253,7 @@
 						<TextBlock Margin="3,2" MinWidth="100" Text="Search" Foreground="#7F919191" Visibility="{Binding ElementName=txtSearchBox, Path=Text.IsEmpty, Converter={StaticResource MyBoolToVisibilityConverter}}" Height="24" />
 						<TextBox MinWidth="100" CaretBrush="#FFE2E2E2" Name="txtSearchBox" Background="Transparent" BorderBrush="{x:Null}" Foreground="#FFC7C7C7" SelectionBrush="#FF003966" BorderThickness="0" Margin="2,2,0,0" UndoLimit="64" />
 						<Button Name="btnClearSearch" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" BorderThickness="0"  HorizontalAlignment="Right" VerticalAlignment="Top" Height="23" Width="23" Background="Transparent" Padding="0,2" Visibility="Visible" BorderBrush="{x:Null}">
-							<TextBlock Text="❌" FontSize="8" Foreground="#FFC3C3C3" Padding="5,3,4,4" HorizontalAlignment="Center">
+							<TextBlock Text="❌" FontSize="8" Foreground="{DynamicResource ButtonForeground}" Padding="5,3,4,4" HorizontalAlignment="Center">
 								<TextBlock.Style>
 									<Style TargetType="TextBlock">
 										<Style.Triggers>
@@ -354,18 +354,18 @@
 							<RowDefinition Height="32" />
 						</Grid.RowDefinitions>
 						<Button Grid.Column="0" Style="{StaticResource CustomButton}" x:Name="btnUpgradeProject" Background="{DynamicResource ButtonBackground}" Foreground="#FFC1C1C1" Margin="5,0,0,0" BorderBrush="{x:Null}">
-							<Label Foreground="#FFC1C1C1">_Upgrade</Label>
+							<Label Foreground="{DynamicResource ButtonForeground}">_Upgrade</Label>
 						</Button>
 						<Button Grid.Column="1" Style="{StaticResource CustomButton}" x:Name="btnLaunchUnity" Background="{DynamicResource ButtonBackground}" Foreground="#FFC1C1C1" Margin="8,0,0,0" BorderBrush="{x:Null}" >
-							<Label Foreground="#FFC1C1C1">_Run Unity</Label>
+							<Label Foreground="{DynamicResource ButtonForeground}">_Run Unity</Label>
 						</Button>
 
 						<Button Grid.Column="2" Style="{StaticResource CustomButton}" x:Name="btnLaunchProject" Background="{DynamicResource ButtonBackground}" Foreground="#FFC1C1C1" Margin="8,0,0,0" BorderBrush="{x:Null}" >
-							<Label Foreground="#FFC1C1C1">_Open Project</Label>
+							<Label Foreground="{DynamicResource ButtonForeground}">_Open Project</Label>
 						</Button>
 
 						<Button Grid.Column="3" Style="{StaticResource CustomButton}" x:Name="btnExplore" Background="{DynamicResource ButtonBackground}" Foreground="#FFC1C1C1" Margin="8,0,0,0" BorderBrush="{x:Null}" >
-							<Label Foreground="#FFC1C1C1">_Explore</Label>
+							<Label Foreground="{DynamicResource ButtonForeground}">_Explore</Label>
 						</Button>
 
 					</Grid>
@@ -406,7 +406,6 @@
 							<DataGridTextColumn Binding="{Binding Version}" ClipboardContentBinding="{x:Null}" Header="Version" IsReadOnly="True" MinWidth="123"/>
 							<DataGridTextColumn Binding="{Binding Path}" ClipboardContentBinding="{x:Null}" Header="Path" IsReadOnly="True"/>
 							<DataGridTextColumn Binding="{Binding Installed}" ClipboardContentBinding="{x:Null}" Header="Installed" IsReadOnly="True"/>
-							<DataGridTextColumn Binding="{Binding Platforms}" ClipboardContentBinding="{x:Null}" Header="Platforms" IsReadOnly="True"/>
 						</DataGrid.Columns>
 
 						<!-- right click context menu -->
@@ -417,7 +416,7 @@
 						</DataGrid.ContextMenu>
 
 						<!-- sample data for testing -->
-						<local:UnityInstallations Version="3000.1.2f1" Path="c:/proggies/unity3000" Installed="12.12.2020" Platforms="" />
+						<local:UnityInstallations Version="3000.1.2f1" Path="c:/proggies/unity3000" Installed="12.12.2020" />
 					</DataGrid>
 
 					<!-- bottom buttoms row -->
@@ -430,27 +429,146 @@
 						<Grid.RowDefinitions>
 							<RowDefinition Height="32" />
 						</Grid.RowDefinitions>
-						<Button Grid.Column="0" Style="{StaticResource CustomButton}" x:Name="btnRunUnity" Background="{DynamicResource ButtonBackground}" Foreground="#FFC1C1C1" Margin="5,0,0,0" BorderBrush="{x:Null}">
-							<Label Foreground="#FFC1C1C1">_Upgrade</Label>
+						<Button Grid.Column="0" Style="{StaticResource CustomButton}" x:Name="btnRunUnity" Background="{DynamicResource ButtonBackground}" Foreground="{DynamicResource ButtonForeground}" Margin="5,0,0,0" BorderBrush="{x:Null}">
+							<Label Foreground="{DynamicResource ButtonForeground}">_Upgrade</Label>
 						</Button>
-						<Button Grid.Column="1" Style="{StaticResource CustomButton}" x:Name="btnReleaseNotes" Background="{DynamicResource ButtonBackground}" Foreground="#FFC1C1C1" Margin="8,0,0,0" BorderBrush="{x:Null}" >
-							<Label Foreground="#FFC1C1C1">_Run Unity</Label>
+						<Button Grid.Column="1" Style="{StaticResource CustomButton}" x:Name="btnReleaseNotes" Background="{DynamicResource ButtonBackground}" Foreground="{DynamicResource ButtonForeground}" Margin="8,0,0,0" BorderBrush="{x:Null}" >
+							<Label Foreground="{DynamicResource ButtonForeground}">_Run Unity</Label>
 						</Button>
-						<Button Grid.Column="3" Style="{StaticResource CustomButton}" x:Name="btnExploreUnity" Background="{DynamicResource ButtonBackground}" Foreground="#FFC1C1C1" Margin="8,0,0,0" BorderBrush="{x:Null}" >
-							<Label Foreground="#FFC1C1C1">_Explore</Label>
+						<Button Grid.Column="3" Style="{StaticResource CustomButton}" x:Name="btnExploreUnity" Background="{DynamicResource ButtonBackground}" Margin="8,0,0,0" BorderBrush="{x:Null}" Foreground="{DynamicResource ButtonForeground}" >
+							<Label Foreground="{DynamicResource ButtonForeground}">_Explore</Label>
 						</Button>
 
 					</Grid>
 				</Grid>
 			</TabItem>
-			<!-- Tab: Packages -->
-			<TabItem Header="Packages" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black" />
+
 			<!-- Tab: Updates -->
-			<TabItem Header="Updates" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black" />
+			<TabItem Header="Updates" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black" >
+				<Grid>
+					<!-- search box -->
+					<Grid Background="{DynamicResource TextBoxBackground}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="222" Margin="6,5,0,0" Height="20"  >
+						<TextBlock Margin="3,2" MinWidth="100" Text="Search" Foreground="#7F919191" Visibility="{Binding ElementName=txtSearchBoxUpdates, Path=Text.IsEmpty, Converter={StaticResource MyBoolToVisibilityConverter}}" Height="24" />
+						<TextBox MinWidth="100" CaretBrush="#FFE2E2E2" Name="txtSearchBoxUpdates" Background="Transparent" BorderBrush="{x:Null}" Foreground="#FFC7C7C7" SelectionBrush="#FF003966" BorderThickness="0" Margin="2,2,0,0" UndoLimit="64" />
+						<Button Name="btnClearUpdatesSearch" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" BorderThickness="0"  HorizontalAlignment="Right" VerticalAlignment="Top" Height="23" Width="23" Background="Transparent" Padding="0,2" Visibility="Visible" BorderBrush="{x:Null}">
+							<TextBlock Text="❌" FontSize="8" Foreground="#FFC3C3C3" Padding="5,3,4,4" HorizontalAlignment="Center">
+								<TextBlock.Style>
+									<Style TargetType="TextBlock">
+										<Style.Triggers>
+											<DataTrigger Binding="{Binding ElementName=txtSearchBoxUpdates, Path=Text}" Value="">
+												<Setter Property="Visibility" Value="Hidden"/>
+
+											</DataTrigger>
+											<DataTrigger Binding="{Binding ElementName=txtSearchBoxUpdates, Path=Text}" Value="{x:Null}">
+												<Setter Property="Visibility" Value="Hidden"/>
+											</DataTrigger>
+										</Style.Triggers>
+									</Style>
+								</TextBlock.Style>
+							</TextBlock>
+						</Button>
+					</Grid>
+
+					<Button Style="{StaticResource CustomButton}" ToolTip="Refresh installations (F5)" x:Name="btnRefreshUpdatesList" Content="⟳" Height="22" Width="22" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="16" Background="#FF3F3F46" Foreground="#FFC1C1C1" Margin="0,4,3,0" Padding="1,-2,1,1" BorderBrush="{x:Null}"/>
+
+					<DataGrid x:Name="dataGridUpdates"  SelectionMode="Single" Margin="4,30,2,42" Background="{x:Null}" BorderBrush="{x:Null}" ColumnHeaderStyle="{StaticResource HeaderStyle}" Padding="0" HorizontalScrollBarVisibility="Disabled" HeadersVisibility="Column" Foreground="#FFD8D8D8" HorizontalGridLinesBrush="#4C000000" VerticalGridLinesBrush="#19000000">
+
+						<DataGrid.Columns>
+							<DataGridTextColumn Binding="{Binding Version}" ClipboardContentBinding="{x:Null}" Header="Version" IsReadOnly="True" MinWidth="123"/>
+							<DataGridTextColumn Binding="{Binding Path}" ClipboardContentBinding="{x:Null}" Header="Path" IsReadOnly="True"/>
+							<DataGridTextColumn Binding="{Binding Installed}" ClipboardContentBinding="{x:Null}" Header="Installed" IsReadOnly="True"/>
+						</DataGrid.Columns>
+
+						<!-- right click context menu -->
+						<DataGrid.ContextMenu>
+							<ContextMenu>
+								<MenuItem Header="Copy Unity Version" />
+							</ContextMenu>
+						</DataGrid.ContextMenu>
+
+						<!-- sample data for testing -->
+						<local:UnityInstallations Version="3000.1.2f1" Path="c:/proggies/unity3000" Installed="12.12.2020" />
+					</DataGrid>
+
+					<!-- bottom buttoms row -->
+					<Grid VerticalAlignment="Bottom" Margin="4,0,8,5">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="20*" />
+							<ColumnDefinition Width="45*" />
+						</Grid.ColumnDefinitions>
+						<Grid.RowDefinitions>
+							<RowDefinition Height="32" />
+						</Grid.RowDefinitions>
+						<Button Grid.Column="0" Style="{StaticResource CustomButton}" x:Name="btnDonwloadInBrowser" Background="{DynamicResource ButtonBackground}" Foreground="{DynamicResource ButtonForeground}" Margin="5,0,0,0" BorderBrush="{x:Null}">
+							<Label Foreground="{DynamicResource ButtonForeground}">_Download in browser</Label>
+						</Button>
+						<Button Grid.Column="1" Style="{StaticResource CustomButton}" x:Name="btnOpenWebsite" Background="{DynamicResource ButtonBackground}" Foreground="{DynamicResource ButtonForeground}" Margin="8,0,0,0" BorderBrush="{x:Null}" >
+							<Label Foreground="{DynamicResource ButtonForeground}">_Release Notes</Label>
+						</Button>
+					</Grid>
+				</Grid>
+
+			</TabItem>
+
 			<!-- Tab: Tools -->
-			<TabItem Header="Tools" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black" />
+			<TabItem Header="Tools" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black">
+				<Grid>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="50*" />
+						<RowDefinition Height="50*" />
+					</Grid.RowDefinitions>
+					<!-- 1st part -->
+
+					<!-- 2nd part -->
+					<Grid Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left">
+						<Border>
+							<StackPanel Orientation="Horizontal" Margin="10">
+								<Button Style="{StaticResource CustomButton}" x:Name="btnTemp1" Background="{DynamicResource ButtonBackground}" Foreground="{DynamicResource ButtonForeground}" Margin="5,0,0,0" BorderBrush="{x:Null}" HorizontalAlignment="Left" VerticalAlignment="Top">
+									<Label Foreground="{DynamicResource ButtonForeground}">_Editor Logs</Label>
+								</Button>
+								<Button Style="{StaticResource CustomButton}" x:Name="btnTemp2" Background="{DynamicResource ButtonBackground}" Foreground="{DynamicResource ButtonForeground}" Margin="5,0,0,0" BorderBrush="{x:Null}" HorizontalAlignment="Left" VerticalAlignment="Top">
+									<Label Foreground="{DynamicResource ButtonForeground}">_Player Logs</Label>
+								</Button>
+								<Button Style="{StaticResource CustomButton}" x:Name="btnTemp3" Background="{DynamicResource ButtonBackground}" Foreground="{DynamicResource ButtonForeground}" Margin="5,0,0,0" BorderBrush="{x:Null}" HorizontalAlignment="Left" VerticalAlignment="Top">
+									<Label Foreground="{DynamicResource ButtonForeground}">_ADB logcat (cmd)</Label>
+								</Button>
+							</StackPanel>
+						</Border>
+					</Grid>
+				</Grid>
+
+			</TabItem>
+
 			<!-- Tab: Settings -->
-			<TabItem Header="Settings" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black" />
+			<TabItem Header="Settings" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black">
+				<Grid>
+					<Grid.RowDefinitions>
+						<!-- top labels-->
+						<RowDefinition Height="28" />
+						<!-- install locations list box -->
+						<RowDefinition Height="30*" />
+						<!-- list buttons -->
+						<RowDefinition Height="33" />
+						<!-- settings -->
+						<RowDefinition Height="70*" />
+						<!-- links -->
+						<RowDefinition Height="33" />
+					</Grid.RowDefinitions>
+
+					<!-- top labels -->
+					<Label Grid.Row="0" Content="Unity Installation Parent Folders" Foreground="{DynamicResource ButtonForeground}" HorizontalAlignment="Left" VerticalAlignment="Bottom"></Label>
+					<Label Grid.Row="0" Content=".. Installations" Foreground="{DynamicResource ButtonForeground}" HorizontalAlignment="Right" VerticalAlignment="Bottom"></Label>
+					<!-- locations list -->
+					<ListBox Grid.Row="1" Background="#FF3C3C3C" Margin="4,0,2,0" />
+					<!-- locations add/remove -->
+					<Button Grid.Row="2" Style="{StaticResource CustomButton}" x:Name="btnASASDFasdf" Background="{DynamicResource ButtonBackground}" Foreground="{DynamicResource ButtonForeground}" Margin="5,0,0,0" BorderBrush="{x:Null}" HorizontalAlignment="Left" VerticalAlignment="Center">
+						<Label Foreground="{DynamicResource ButtonForeground}">_asdf</Label>
+					</Button>
+					<!-- settings-->
+					<!-- links-->
+
+				</Grid>
+			</TabItem>
 		</TabControl>
 
 		<Grid Grid.Row="2" UseLayoutRounding="False">
